--- a/build.gradle
+++ b/build.gradle
@@ -19,19 +19,14 @@ repositories {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-//	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.testng:testng:7.1.0'
-//    compileOnly 'org.projectlombok:lombok'
-//	runtimeOnly 'org.postgresql:postgresql'
-//	annotationProcessor 'org.projectlombok:lombok'
-//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework:spring-orm:5.3.17'
 	implementation 'org.projectlombok:lombok:1.18.22'
 	implementation 'org.hibernate:hibernate-core:5.6.7.Final'
 	implementation 'org.postgresql:postgresql:42.3.3'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+	implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
